--- a/orchestration/docker/docker-compose.yml
+++ b/orchestration/docker/docker-compose.yml
@@ -198,6 +198,72 @@ services:
     <<: *shared-network
 
 # ============================================================================
+# APACHE SUPERSET
+# ============================================================================
+
+  superset-redis:
+    image: redis:7-alpine
+    profiles: ["superset"]
+    volumes:
+      - superset-redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    <<: *shared-network
+
+  superset:
+    image: apache/superset:4.1.1
+    profiles: ["superset"]
+    ports:
+      - "${SUPERSET_PORT:-8088}:8088"
+    volumes:
+      - superset-data:/app/superset_home
+    environment:
+      <<: *common-env
+      SUPERSET_SECRET_KEY: ${SUPERSET_SECRET_KEY:-thisISaSECRET_1234}
+      REDIS_HOST: superset-redis
+      REDIS_PORT: 6379
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8088/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 90s
+    depends_on:
+      superset-redis:
+        condition: service_healthy
+    <<: *shared-network
+
+  superset-init:
+    image: apache/superset:4.1.1
+    profiles: ["superset"]
+    command:
+      - /bin/bash
+      - -c
+      - |
+        superset db upgrade
+        superset fab create-admin \
+          --username ${SUPERSET_ADMIN_USER:-admin} \
+          --firstname Admin \
+          --lastname User \
+          --email admin@localhost \
+          --password ${SUPERSET_ADMIN_PASSWORD:-admin} || true
+        superset init
+    environment:
+      <<: *common-env
+      SUPERSET_SECRET_KEY: ${SUPERSET_SECRET_KEY:-thisISaSECRET_1234}
+      REDIS_HOST: superset-redis
+      REDIS_PORT: 6379
+    volumes:
+      - superset-data:/app/superset_home
+    depends_on:
+      superset-redis:
+        condition: service_healthy
+    <<: *shared-network
+
+# ============================================================================
 # ORCHESTRATION - AIRFLOW
 # ============================================================================
 
@@ -306,6 +372,25 @@ services:
       - ../../services/ofelia/config.ini:/etc/ofelia/config.ini:ro
     <<: *shared-network
 
+  nodered:
+    image: nodered/node-red:4.0
+    profiles: ["nodered"]
+    ports:
+      - "${NODERED_PORT:-1880}:1880"
+    volumes:
+      - nodered-data:/data
+      - ../../services/nodered/settings.js:/data/settings.js:ro
+    environment:
+      <<: *common-env
+      NODERED_USER: ${NODERED_USER:-admin}
+      NODERED_PASSWORD_HASH: ${NODERED_PASSWORD_HASH:-$$2b$$08$$K3WmJkPM5RfDR7kuBvGn4eYKGlFmxLVdBNwMBwVH8GdNzDqLT0Wdm}
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:1880 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    <<: *shared-network
+
 # ============================================================================
 # VOLUMES & NETWORKS
 # ============================================================================
@@ -317,6 +402,9 @@ volumes:
   elasticsearch-data:
   grafana-data:
   metabase-data:
+  superset-data:
+  superset-redis-data:
+  nodered-data:
   airflow-postgres-data:
   airflow-logs:
 
