--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@
 name: analytical-ecosystem
 
 # Shared network for all services
+# Network is created by ./ecosystem script or external projects (like TCDNE)
 networks:
   ecosystem:
     name: analytical-ecosystem
+    external: true
