Sync service metadata with env

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,25 @@ METABASE_PORT=3000
 # MB_ADMIN_EMAIL=admin@example.com
 # MB_ADMIN_PASSWORD=your-secure-password
 
+# n8n
+N8N_PORT=5678
+N8N_HOST=localhost
+N8N_EMAIL=admin@localhost
+N8N_PASSWORD=ecosystem
+N8N_WEBHOOK_URL=http://localhost:5678/
+
+# Node-RED
+NODERED_PORT=1880
+NODERED_USER=admin
+# Use $$ to escape $ for docker compose variable substitution.
+NODERED_PASSWORD_HASH=$$2b$$08$$K3WmJkPM5RfDR7kuBvGn4eYKGlFmxLVdBNwMBwVH8GdNzDqLT0Wdm
+
+# Superset
+SUPERSET_PORT=8088
+SUPERSET_ADMIN_USER=admin
+SUPERSET_ADMIN_PASSWORD=admin
+SUPERSET_SECRET_KEY=thisISaSECRET_1234
+
 # Grafana
 GRAFANA_PORT=3001
 GRAFANA_USER=admin
