--- a/services/grafana/service.yaml
+++ b/services/grafana/service.yaml
@@ -1,9 +1,9 @@
 name: Grafana
 category: visualization
-port: 3001
-url: "http://localhost:3001"
-credentials: "admin/admin"
+port: "${GRAFANA_PORT:-3001}"
+url: "http://localhost:${GRAFANA_PORT:-3001}"
+credentials: "${GRAFANA_USER:-admin}/${GRAFANA_PASSWORD:-admin}"
 
 healthcheck:
   type: http
-  endpoint: "http://localhost:3001/api/health"
+  endpoint: "http://localhost:${GRAFANA_PORT:-3001}/api/health"
