--- a/services/kibana/service.yaml
+++ b/services/kibana/service.yaml
@@ -1,10 +1,10 @@
 name: Kibana
 category: search
-port: 5601
-url: "http://localhost:5601"
+port: "${KIBANA_PORT:-5601}"
+url: "http://localhost:${KIBANA_PORT:-5601}"
 depends_on:
   - elasticsearch
 
 healthcheck:
   type: http
-  endpoint: "http://localhost:5601/api/status"
+  endpoint: "http://localhost:${KIBANA_PORT:-5601}/api/status"
