--- a/services/redis/service.yaml
+++ b/services/redis/service.yaml
@@ -1,7 +1,7 @@
 name: Redis
 category: cache
-port: 6379
-url: "localhost:6379"
+port: "${REDIS_PORT:-6379}"
+url: "localhost:${REDIS_PORT:-6379}"
 
 healthcheck:
   type: exec
