--- a/services/elasticsearch/service.yaml
+++ b/services/elasticsearch/service.yaml
@@ -1,8 +1,8 @@
 name: Elasticsearch
 category: search
-port: 9200
-url: "http://localhost:9200"
+port: "${ES_PORT:-9200}"
+url: "http://localhost:${ES_PORT:-9200}"
 
 healthcheck:
   type: http
-  endpoint: "http://localhost:9200"
+  endpoint: "http://localhost:${ES_PORT:-9200}"
