--- a/services/jupyter/service.yaml
+++ b/services/jupyter/service.yaml
@@ -1,9 +1,9 @@
 name: JupyterLab
 category: notebook
-port: 8888
-url: "http://localhost:8888/lab?token=ecosystem"
-credentials: "token: ecosystem"
+port: "${JUPYTER_PORT:-8888}"
+url: "http://localhost:${JUPYTER_PORT:-8888}/lab?token=${JUPYTER_TOKEN:-ecosystem}"
+credentials: "token: ${JUPYTER_TOKEN:-ecosystem}"
 
 healthcheck:
   type: http
-  endpoint: "http://localhost:8888/api"
+  endpoint: "http://localhost:${JUPYTER_PORT:-8888}/api"
