--- a/services/n8n/service.yaml
+++ b/services/n8n/service.yaml
@@ -1,9 +1,9 @@
 name: n8n
 category: orchestration
-port: 5678
-url: "http://localhost:5678"
-credentials: "admin@localhost / ecosystem"
+port: "${N8N_PORT:-5678}"
+url: "http://${N8N_HOST:-localhost}:${N8N_PORT:-5678}"
+credentials: "${N8N_EMAIL:-admin@localhost} / ${N8N_PASSWORD:-ecosystem}"
 
 healthcheck:
   type: http
-  endpoint: "http://localhost:5678/healthz"
+  endpoint: "http://localhost:${N8N_PORT:-5678}/healthz"
