Modularize env templates

--- a/.env.example
+++ b/.env.example
@@ -1,66 +1,8 @@
 # Analytical Ecosystem Configuration
-# Copy this file to .env and customize as needed
+# Generate a service-specific env file:
+#   ./ecosystem env --profiles postgres,jupyter --output .env
+# Or generate a full example for all services:
+#   ./ecosystem env --output .env.example
 
-# Timezone
+# Shared settings (used across services)
 TIMEZONE=America/New_York
-
-# PostgreSQL
-POSTGRES_PORT=5432
-POSTGRES_USER=analyticsUser
-POSTGRES_PASSWORD=analyticsPass
-POSTGRES_DB=analytics
-
-# MySQL
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=rootPass
-MYSQL_USER=analyticsUser
-MYSQL_PASSWORD=analyticsPass
-MYSQL_DATABASE=analytics
-
-# Redis
-REDIS_PORT=6379
-
-# Elasticsearch
-ES_PORT=9200
-KIBANA_PORT=5601
-ES_HEAP=1g
-
-# Jupyter
-JUPYTER_PORT=8888
-JUPYTER_TOKEN=
-
-# Metabase
-METABASE_PORT=3000
-# Set these to skip the setup wizard:
-# MB_ADMIN_EMAIL=admin@example.com
-# MB_ADMIN_PASSWORD=your-secure-password
-
-# n8n
-N8N_PORT=5678
-N8N_HOST=localhost
-N8N_EMAIL=admin@localhost
-N8N_PASSWORD=ecosystem
-N8N_WEBHOOK_URL=http://localhost:5678/
-
-# Node-RED
-NODERED_PORT=1880
-NODERED_USER=admin
-# Use $$ to escape $ for docker compose variable substitution.
-NODERED_PASSWORD_HASH=$$2b$$08$$K3WmJkPM5RfDR7kuBvGn4eYKGlFmxLVdBNwMBwVH8GdNzDqLT0Wdm
-
-# Superset
-SUPERSET_PORT=8088
-SUPERSET_ADMIN_USER=admin
-SUPERSET_ADMIN_PASSWORD=admin
-SUPERSET_SECRET_KEY=thisISaSECRET_1234
-
-# Grafana
-GRAFANA_PORT=3001
-GRAFANA_USER=admin
-GRAFANA_PASSWORD=admin
-
-# Airflow
-AIRFLOW_PORT=8080
-AIRFLOW_USER=admin
-AIRFLOW_PASSWORD=admin
-AIRFLOW_UID=1000
