--- a/services/big-beautiful-screens/compose.yaml
+++ b/services/big-beautiful-screens/compose.yaml
@@ -6,6 +6,11 @@ services:
       - "${BBS_PORT:-8000}:8000"
     volumes:
       - bbs-data:/app/data
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/admin/screens || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     networks:
       - ecosystem
 
