--- a/services/nodered/env.example
+++ b/services/nodered/env.example
@@ -1,5 +1,7 @@
 # Node-RED
 NODERED_PORT=1880
 NODERED_USER=admin
+NODERED_PASSWORD=ecosystem
+# Optional: pre-hashed bcrypt password (overrides NODERED_PASSWORD)
 # Use $$ to escape $ for docker compose variable substitution.
-NODERED_PASSWORD_HASH=$$2b$$08$$K3WmJkPM5RfDR7kuBvGn4eYKGlFmxLVdBNwMBwVH8GdNzDqLT0Wdm
+# NODERED_PASSWORD_HASH=$$2b$$08$$...
