--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,39 @@ Thumbs.db
 
 # Docker
 *.tar
+# Environment files
+.env
+
+# Shared data (user-generated content)
+shared/data/*
+!shared/data/.gitkeep
+
+# Logs
+*.log
+logs/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+*.tar
+
+# Virtual environment
+.venv/
